--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    -->
+
+    <!-- Material Color Palette -->
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimary_dark">#1976D2</color>
+    <color name="colorPrimary_light">#BBDEFB</color>
+    <color name="colorAccent">#03A9F4</color>
+    <color name="colorPrimary_text">#212121</color>
+    <color name="colorSecondary_text">#757575</color>
+    <color name="colorIcons">#FFFFFF</color>
+    <color name="colorDivider">#BDBDBD</color>
+
+    <color name="colorBackground">#E7E7E7</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorDisabled">#C5C5C5</color>
 </resources>
