--- a/app/src/main/res/layout/component_details_fragment.xml
+++ b/app/src/main/res/layout/component_details_fragment.xml
@@ -33,15 +33,13 @@
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         style="@style/textNormal"
-                        android:text="@string/demo_text"
-                        android:labelFor="@id/usernameEditText"/>
+                        android:text="@string/demo_text"/>
 
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/textNormal"
-                        android:text="@string/demo_text"
-                        android:labelFor="@id/usernameEditText"/>
+                        android:text="@string/demo_text"/>
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
