--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -24,6 +24,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin">
 
+            <!--
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -37,6 +38,25 @@
                     style="@style/textNormal"
                     android:text="@string/demo_text"
                     android:id="@+id/dataTextView"/>
+                    -->
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/logo"
+                        android:contentDescription="@string/login_logo"/>
+            </LinearLayout>
+
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login_menu"
+                    android:id="@+id/menuButton"/>
 
             <Button
                     android:layout_width="match_parent"
