--- a/app/src/main/res/layout/component_type_list_fragment.xml
+++ b/app/src/main/res/layout/component_type_list_fragment.xml
@@ -3,10 +3,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/componentlist"
+        android:id="@+id/componenttypelist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.componentlist.ComponentListFragment"
+        tools:context=".ui.componenttypelist.ComponentTypeListFragment"
         android:background="@color/colorBackground"
         android:orientation="vertical">
 
@@ -53,7 +53,7 @@
                 <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Midlertidigt gå til detaljer"
+                        android:text="Midlertidigt gå til komponenter"
                         android:id="@+id/detailsButton"/>
             </LinearLayout>
         </LinearLayout>
