--- a/app/src/main/res/layout/component_details_fragment.xml
+++ b/app/src/main/res/layout/component_details_fragment.xml
@@ -30,16 +30,103 @@
                     android:orientation="horizontal">
 
                 <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/textHeading"
+                        android:text="@string/demo_text"
+                        android:id="@+id/serialHeadingTextView"/>
+
+                <Space
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"/>
+
+                <Button
+                        android:id="@+id/deleteButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/componentDetails_delete"/>
+            </LinearLayout>
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorDivider"/>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <TextView
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         style="@style/textNormal"
-                        android:text="@string/demo_text"/>
+                        android:text="@string/componentDetails_serial"/>
 
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/textNormal"
-                        android:text="@string/demo_text"/>
+                        android:text="@string/demo_text"
+                        android:id="@+id/serialTextView"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        style="@style/textNormal"
+                        android:text="@string/componentDetails_type"/>
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/textNormal"
+                        android:text="@string/demo_text"
+                        android:id="@+id/typeTextView"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        style="@style/textNormal"
+                        android:text="@string/componentDetails_created"/>
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/textNormal"
+                        android:text="@string/demo_text"
+                        android:id="@+id/createdTextView"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        style="@style/textNormal"
+                        android:text="@string/componentDetails_modified"/>
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/textNormal"
+                        android:text="@string/demo_text"
+                        android:id="@+id/modifiedTextView"/>
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
