--- a/app/src/main/res/layout/component_type_list_fragment.xml
+++ b/app/src/main/res/layout/component_type_list_fragment.xml
@@ -33,6 +33,13 @@
                     android:hint="@string/componentList_filter"
                     android:imeOptions="actionDone"
                     android:inputType="textCapSentences"/>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/textNormalError"
+                    android:text="@string/componentTypeList_notConnectedToInternet"
+                    android:id="@+id/notConnectedToInternetTextView"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
