--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="colorBackground">#E7E7E7</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorDisabled">#C5C5C5</color>
+    <color name="colorError">#AA0000</color>
 </resources>
